<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding"
    tools:context=".client.ClientActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/client_number_of_days"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/text_view_label_padding"
            android:paddingEnd="@dimen/text_view_label_padding"
            android:id="@+id/number_of_days"/>
    </LinearLayout>

    <com.google.android.material.slider.Slider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:valueFrom="@integer/client_min_number_of_days"
        android:valueTo="@integer/client_max_number_of_days"
        android:value="@integer/client_default_number_of_days"
        android:stepSize="@integer/client_step_size"
        android:paddingBottom="@dimen/slider_padding"
        android:id="@+id/number_of_days_slider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/client_number_of_advertisements"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/text_view_label_padding"
            android:paddingEnd="@dimen/text_view_label_padding"
            android:id="@+id/number_of_advertisements"/>
    </LinearLayout>

    <com.google.android.material.slider.Slider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:valueFrom="@integer/client_min_number_of_advertisements_per_day"
        android:valueTo="@integer/client_max_number_of_advertisements_per_day"
        android:stepSize="@integer/client_step_size"
        android:value="@integer/client_default_number_of_advertisements_per_day"
        android:paddingBottom="@dimen/slider_padding"
        android:id="@+id/number_of_advertisements_slider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/client_size_of_advertisement"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/text_view_label_padding"
            android:paddingEnd="@dimen/text_view_label_padding"
            android:id="@+id/size_of_advertisements"/>
    </LinearLayout>

    <com.google.android.material.slider.Slider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:valueFrom="@integer/client_min_size_of_advertisement"
        android:valueTo="@integer/client_max_size_of_advertisement"
        android:stepSize="@integer/client_step_size"
        android:value="@integer/client_default_size_of_advertisement"
        android:paddingBottom="@dimen/slider_padding"
        android:id="@+id/size_of_advertisements_slider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/client_mtu_size"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/text_view_label_padding"
            android:paddingEnd="@dimen/text_view_label_padding"
            android:id="@+id/mtu_size"/>
    </LinearLayout>

    <com.google.android.material.slider.Slider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:valueFrom="@integer/client_min_mtu_size"
        android:valueTo="@integer/client_max_mtu_size"
        android:stepSize="@integer/client_step_size"
        android:value="@integer/client_default_mtu_size"
        android:paddingBottom="@dimen/slider_padding"
        android:id="@+id/mtu_size_slider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/text_view_label_padding"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connection_status"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/text_view_label_padding"
            android:paddingEnd="@dimen/text_view_label_padding"
            android:text="@string/connection_status_disconnected"
            android:id="@+id/connection_status"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/transfer_button_holder">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/client_transfer_advertisements"
                android:enabled="false"
                android:onClick="initiateAdvertisementTransfer"
                android:id="@+id/transfer_advertisements"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/client_transfer_scans"
                android:enabled="false"
                android:onClick="initiateScanRecordTransfer"
                android:id="@+id/transfer_scans"/>
        </LinearLayout>

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:indeterminate="false"
            android:visibility="gone"
            android:id="@+id/transfer_progress"/>
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/log"/>
    </ScrollView>

</LinearLayout>
